<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/group_layout_background"
    android:orientation="vertical"
    android:gravity="center"
    >


    <ImageView
       android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/groups_iv_person"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/man"
        android:background="@drawable/group_person_shape"/>

    <TextView
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:id="@+id/groups_tv_pesonname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
       />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"

        android:orientation="horizontal">

        <TextView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/group_tv_shape"
            android:id="@+id/groups_tv_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/group_tv_pages"
            android:textColor="@color/white"/>

        <TextView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:id="@+id/groups_tv_finishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/group_tv_shape"
            android:text="@string/group_tv_finish" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:id="@+id/groups_tv_searchhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_tv_search_hint1" />

    <EditText
        android:drawableStart="@drawable/ic_search"

        android:id="@+id/groups_et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="24dp"
        android:inputType="textPersonName"
        android:background="@drawable/group_etsearch_shape"
        android:hint="@string/group_et_search_hint"
        android:padding="16dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_search" />

    <TextView
        android:gravity="center"
        android:textSize="16sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:id="@+id/groups_tv_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_tv_search_hint2"
        android:textColor="@color/light_gray"/>

    <TextView
        android:gravity="center"
        android:textSize="16sp"
        android:padding="8dp"
        android:id="@+id/groups_tv_creategrou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create new group"
        android:textColor="#7DEDFF"
        android:layout_marginTop="100dp"/>

</LinearLayout>